sfdc_dev/force-app/main/default/objects/Account/fields/Account_Detailspage__c.field-meta.xml
<CustomField>
    <fullName>Account_Detailspage__c</fullName>
    <label>Account_Detailspage</label>
    <type>Url</type>
</CustomField>