sfdc_dev/force-app/main/default/objects/Account/fields/Project_Size__c.field-meta.xml
<CustomField>
    <fullName>Project_Size__c</fullName>
    <label>Project Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work order</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>