sfdc_dev/force-app/main/default/objects/Account/fields/Total_Revised_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Revised_Budget__c</fullName>
    <label>Total Revised Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>